fixed gap

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   position:absolute; 
 }
 .rules{
-  margin-left: 230px;
+  margin-left: 200px;
   font-weight: bolder;
 }
 
